--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -1,3 +1,13 @@
+:root {
+  --header-bg: rgb(230,230,230);
+  --header-border: rgb(182,182,182);
+}
+
+.dark {
+  --header-bg: rgb(23,23,23);
+  --header-border: rgb(82,82,82);
+}
+
 .header {
   border-bottom: 1px solid transparent;
   backdrop-filter: blur(0px);
@@ -8,9 +18,9 @@
 
 @keyframes show-border {
   to {
-    border-bottom: 1px solid rgb(82,82,82);
+    border-bottom: 1px solid var(--header-border);
     backdrop-filter: blur(10px);
-    background-color: rgb(23,23,23);
+    background-color: var(--header-bg);
     box-shadow: 0px 2px 15px rgba(0,0,0,0.2);
   }
 }
