--- a/client/src/styles/multiple-choice-test.css
+++ b/client/src/styles/multiple-choice-test.css
@@ -1,6 +1,12 @@
 :root{
   --test-border: hsl(0deg,0%,82%);
   --triangle-size: 10px;
+
+  --tick-icon-lentgh : 30.66960334777832;
+  --cross-icon-lentgh : 40.19870376586914;
+
+  --color-green: hsl(120deg, 50%,50%);
+  --color-red: hsl(0deg, 50%,50%);
 }
 
 .dark {
@@ -58,18 +64,42 @@
   transition: background-color 500ms;
 }
 
+/* ICON */
+.tick-svg > .tick-path,
+.cross-svg > .cross-path{
+  transition: stroke-dashoffset 0.5s;
+  stroke-width: .8px;
+}
+
+.tick-svg > .tick-path{
+  stroke-dasharray: var(--tick-icon-lentgh);
+  stroke-dashoffset: var(--tick-icon-lentgh);
+  color: var(--color-green);
+}
+
+.cross-svg > .cross-path{
+  stroke-dasharray: var(--cross-icon-lentgh);
+  stroke-dashoffset: var(--cross-icon-lentgh);
+  color: var(--color-red);
+}
 
 /* Animate on hover card */
 *:hover > div > .multiple-choice-test {
   transform: translateY(10px);
   transition: transform 150ms;
 
-  & .answer {
-    background-color: hsl(0deg, 50%,50%);
+  /* & .answer {
+    background-color: var(--color-red);
   }
 
   & .question:nth-child(even) > .answer {
-    background-color: hsl(120deg, 50%,50%);
+    background-color: var(--color-green);
+  } */
+
+  & .tick-svg > .tick-path,
+  .cross-svg > .cross-path {
+    stroke-dashoffset: 0;
+    transition: stroke-dashoffset 0.5s;
   }
 }
 
