--- a/client/src/styles/multiple-choice-test.css
+++ b/client/src/styles/multiple-choice-test.css
@@ -1,20 +1,20 @@
-:root{
-  --test-border: hsl(0deg,0%,82%);
+:root {
+  --test-border: hsl(0deg, 0%, 82%);
   --triangle-size: 10px;
 
-  --tick-icon-lentgh : 30.66960334777832;
-  --cross-icon-lentgh : 40.19870376586914;
+  --tick-icon-lentgh: 30.66960334777832;
+  --cross-icon-lentgh: 40.19870376586914;
 
-  --color-green: hsl(120deg, 50%,50%);
-  --color-red: hsl(0deg, 50%,50%);
+  --color-green: hsl(120deg, 50%, 50%);
+  --color-red: hsl(0deg, 50%, 50%);
 }
 
 .dark {
-  --test-border: hsl(0deg,0%,32%);
+  --test-border: hsl(0deg, 0%, 32%);
 }
 
 .multiple-choice-test {
-  border-radius: .5em;
+  border-radius: 0.5em;
   border-top-right-radius: 0px;
   border: 1px solid var(--test-border);
   aspect-ratio: 2/3;
@@ -23,8 +23,8 @@
   transition: transform 150ms;
   display: flex;
   flex-direction: column;
-  gap: .5em;
-  padding: .5em;
+  gap: 0.5em;
+  padding: 0.5em;
   padding-top: 1em;
   position: relative;
 }
@@ -34,7 +34,7 @@
   position: absolute;
   top: -1px;
   right: -1px;
-  content: "";
+  content: '';
   width: 0;
   height: 0;
   border-top: var(--triangle-size) solid var(--test-border);
@@ -46,18 +46,18 @@
 .multiple-choice-test > .question {
   display: flex;
   align-items: center;
-  gap: .2em;
+  gap: 0.2em;
   /* gap: 1em; */
 }
 
 .box {
-  width: .75em;
-  height: .75em;
+  width: 0.75em;
+  height: 0.75em;
   border: 1px solid var(--test-border);
 }
 
 .answer {
-  height: .25em;
+  height: 0.25em;
   width: calc(100% - 1em);
   border-radius: 1em;
   background-color: var(--test-border);
@@ -66,18 +66,18 @@
 
 /* ICON */
 .tick-svg > .tick-path,
-.cross-svg > .cross-path{
+.cross-svg > .cross-path {
   transition: stroke-dashoffset 0.5s;
-  stroke-width: .8px;
+  stroke-width: 0.8px;
 }
 
-.tick-svg > .tick-path{
+.tick-svg > .tick-path {
   stroke-dasharray: var(--tick-icon-lentgh);
   stroke-dashoffset: var(--tick-icon-lentgh);
   color: var(--color-green);
 }
 
-.cross-svg > .cross-path{
+.cross-svg > .cross-path {
   stroke-dasharray: var(--cross-icon-lentgh);
   stroke-dashoffset: var(--cross-icon-lentgh);
   color: var(--color-red);
@@ -102,4 +102,3 @@
     transition: stroke-dashoffset 0.5s;
   }
 }
-
