--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,3 +67,21 @@
     @apply bg-background text-foreground;
   }
 }
+
+@font-face {
+  font-family: 'DMSans';
+  src: url('fonts/DMSans-Regular.ttf');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'DMSans';
+  src: url('fonts/DMSans-Bold.ttf');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'DMSans';
+  src: url('fonts/DMSans-Black.ttf');
+  font-weight: 900;
+}
