style: add smooth scrolling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,6 +68,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: 'DMSans';
   src: url('fonts/DMSans-Regular.ttf');
