--- a/client/src/styles/fonts.css
+++ b/client/src/styles/fonts.css
@@ -1,17 +1,17 @@
 @font-face {
   font-family: 'DMSans';
-  src: url('./fonts/DMSans-Regular.ttf');
+  src: url('/fonts/DMSans-Regular.ttf');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'DMSans';
-  src: url('./fonts/DMSans-Bold.ttf');
+  src: url('/fonts/DMSans-Bold.ttf');
   font-weight: 700;
 }
 
 @font-face {
   font-family: 'DMSans';
-  src: url('./fonts/DMSans-Black.ttf');
+  src: url('/fonts/DMSans-Black.ttf');
   font-weight: 900;
 }
