--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -17,3 +17,17 @@
 html {
   scroll-behavior: smooth;
 }
+
+/* HIDE NUMBER INPUT TYPE */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
