--- a/client/src/pages/auth/login/loginPage.css
+++ b/client/src/pages/auth/login/loginPage.css
@@ -1,10 +1,12 @@
+/* Apply only to label within a form with data-login tag, so that it doesnt affects other pages */
+
 :root {
   --transition-time: 250ms;
 }
 
 /* When i focus/hover an input, animate the icon */
 /* Span is the element that wraps the icon */
-label > span {
+form[data-login] label > span {
   opacity: 0;
   transition: opacity var(--transition-time);
 
@@ -15,8 +17,8 @@ label > span {
   }
 }
 
-label:has(~ input:focus) span,
-label:has(~ input:hover) span {
+form[data-login] label:has(~ input:focus) span,
+form[data-login] label:has(~ input:hover) span {
   opacity: 1;
 
   & ~ p {
